# wall

./: .env.example  .gitignore  README.md  generate_badges.py  index.html  manifest.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: badge-wall.yml  ci.yml  deploy-pages.yml  generate-badges.yml  update-badges.yml
config/: repos.json
src/: __init__.py
src/badge_generator/: __init__.py
src/scripts/: generate-badges.ts
tests/: __init__.py  test_generator.py
wall/badge_generator/: __init__.py  generator.py  html_generator.py  logger.py  main.py
wall/badge_generator/config/: __init__.py  config_manager.py
wall/badge_generator/services/: __init__.py  badge_service.py  github_service.py
wall/badge_generator/templates/: __init__.py  base.html  components.py  service-worker.js  styles.css
