[project]
name = "wall"
version = "0.1.0"
description = "GitHub Workflow Status Wall"
requires-python = ">=3.8"
dependencies = [
    "PyGithub==2.1.1",
    "python-dotenv==1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
generate-badges = "wall.badge_generator.generator:main"
